# morse

./: LICENSE  README.md  morse.cabal
app/: Main.hs
data/: morseTable.txt
src/: HereMorse.hs  Morse.hs
test/: Spec.hs
