name:                morse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/freefrancisco/morse#readme
license:             BSD3
license-file:        LICENSE
author:              Francisco Gutierrez
maintainer:          freefrancisco@gmail.com
copyright:           Copyright: (c) 2017 Francisco Gutierrez
category:            Utils
build-type:          Simple
extra-source-files:  README.md
data-dir:            data
data-files:          morseTable.txt
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Morse, HereMorse
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
                     , here
  default-language:    Haskell2010

executable morse
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , morse
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , morse
                     , QuickCheck
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/freefrancisco/morse
